# Symath

./: .gitignore  CMakeLists.txt
include/math/: IntegerMath.hpp  Rational.hpp
include/parser/: Operator.hpp
include/symath/: BinaryFunction.hpp  Expression.hpp  ExpressionBuilder.hpp  UnaryFunction.hpp
src/: CMakeLists.txt
src/parser/: Operator.cpp
test/: CMakeLists.txt  TrivialTest.cpp
test/parser/: TestOperator.cpp
test/symath/: TestBinaryFunction.cpp  TestExpression.cpp  TestExpressionBuilder.cpp  TestUnaryFunction.cpp
